# bedrock

./: Cargo.toml  README.md  dfx.json  generate-did.sh
client_db/: db  snap.00000000000002EE
src/app/: Cargo.toml
src/app/src/: lib.rs  store.rs
src/app/src/reducer/: ledger.rs  meta.rs  mod.rs
src/app/src/types/: actions.rs  address.rs  block.rs  events.rs  meta.rs  mod.rs  storable.rs
src/client/: Cargo.toml
src/client/src/: main.rs
src/ex6_backend/: Cargo.toml
src/ic/: Cargo.toml  appchain.did
src/ic/src/: lib.rs  stable_backend.rs
src/staging_memory/: Cargo.toml
src/staging_memory/src/: btree.rs  lib.rs  log.rs  mem.rs  overlay.rs  struct_store.rs  traits.rs
