[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib"]

[dependencies]
candid = "0.10"
ic-stable-structures = "0.6"
serde = { version = "1", features = ["derive"] }
staging_memory = { path = "../staging_memory" }
